# Diplomat

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
worker/: pyproject.toml
worker/diplomat_worker/: __init__.py  benchmarks.py
worker/diplomat_worker/api/: __init__.py  app.py  runtime.py  schemas.py
worker/diplomat_worker/asr/: __init__.py  base.py  chunk_store.py  config.py  fake.py  faster_whisper.py  merge.py  resolver.py  vibevoice.py
worker/diplomat_worker/export/: __init__.py  burn_in.py  srt.py  text_subtitles.py
worker/diplomat_worker/media/: __init__.py  audio.py  ffmpeg.py  waveform.py
worker/diplomat_worker/models/: __init__.py  capabilities.py  dev_manifests.py  manager.py  profiles.py  registry.py
worker/diplomat_worker/pipeline/: __init__.py  core.py  segmentation.py  subtitle_cues.py
worker/diplomat_worker/release/: __init__.py  evidence.py  readiness.py
worker/diplomat_worker/runtime/: __init__.py  resources.py
worker/diplomat_worker/schemas/: __init__.py  subtitle.py  task.py
worker/diplomat_worker/storage/: __init__.py  project_store.py
worker/diplomat_worker/tasks/: __init__.py  analysis.py  errors.py  export.py  translation.py  waveform.py
worker/diplomat_worker/translation/: __init__.py  base.py  config.py  ct2_marian.py  fake.py  libretranslate.py  local_llm.py  quality.py  resolver.py
worker/tests/: test_benchmarks.py
worker/tests/acceptance/: test_acceptance_runner.py  test_acceptance_summary_verifier.py  test_media_candidates.py
worker/tests/api/: test_app.py  test_runtime.py
worker/tests/asr/: test_chunk_store.py  test_fake.py  test_faster_whisper.py  test_merge.py  test_resolver.py  test_vibevoice.py
worker/tests/export/: test_burn_in.py  test_srt.py  test_text_subtitles.py
worker/tests/media/: test_audio.py  test_ffmpeg.py  test_waveform.py
worker/tests/models/: test_dev_manifests.py  test_manager.py  test_profiles.py  test_registry.py
worker/tests/pipeline/: test_core.py  test_long_asr.py  test_segmentation.py  test_subtitle_cues.py
worker/tests/release/: test_evidence.py  test_readiness.py
worker/tests/runtime/: test_resources.py
worker/tests/schemas/: test_subtitle.py  test_task.py
worker/tests/storage/: test_project_store.py  test_task_store.py
(+262 files in other folders)
