[project]
name = "diplomat-worker"
version = "0.1.0"
description = "Local AI and media worker for Diplomat"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.1.0"
]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
