[package]
name = "diplomat"
version = "0.33.0"
description = "Diplomat desktop shell"
authors = ["Drew1811266"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
